<resources>
    <string name="app_name">SudoFun</string>
    <string name="sudofun">SudoFun</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="time">00:00</string>
    <string name="hinweis">Hinweis</string>
    <string name="back">Zurück</string>
    <string name="modus">Modus</string>
    <string name="dein_name">Dein Name</string>
    <string name="background_numbers">background_numbers</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="play">Play</string>
    <string name="colorful_numbers_background">colorful numbers background</string>
    <string name="gewonnen">Gewonnen!</string>
    <string name="best_name">best_name</string>
    <string name="best_score">best_score</string>
    <string name="user_score_format">%d. %s</string>
    <string name="ModusOn">Spielen</string>
    <string name="ModusOff">Notizen</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">clear</string>
    <string name="statistik">Statistik</string>
    <string name="neues_spiel">Neues Spiel</string>
    <string name="spiel_wird_geladen">Spiel wird geladen..</string>
    <string name="icon_timer">icon_timer</string>
</resources>