<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@string/background_numbers"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_numbers" />

    <LinearLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="2dp"
            android:fontFamily="@font/alfa_slab_one_regular"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/alfa_slab_one_regular"
        android:text="@string/hinweis" />

    <!-- Button für den Modus -->
    <Button
        android:id="@+id/buttonMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/alfa_slab_one_regular"
        android:text="@string/modus"
        android:textSize="14sp" />

</RelativeLayout>
