<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:src="@drawable/splash_numbers"
        android:contentDescription="@string/background_numbers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/alfa_slab_one_regular"
            android:shadowColor="@color/white"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.6"
            android:text="@string/sudofun"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/alfa_slab_one_regular"
            android:shadowColor="@color/white"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1.6"
            android:text="@string/dein_name"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/edit_text_border_black_bg_white"
            android:inputType="textPersonName"
            android:fontFamily="@font/alfa_slab_one_regular"
            android:padding="15dp"
            android:singleLine="true"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/alfa_slab_one_regular"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="25sp"
             />

    </LinearLayout>

</FrameLayout>