<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:contentDescription="@string/background_numbers"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_numbers" />

    <LinearLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textViewTimer_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/alfa_slab_one_regular"
            android:paddingHorizontal="2dp"
            android:shadowColor="#000000"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/time"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="2dp"

        android:fontFamily="@font/alfa_slab_one_regular"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="20sp" />

    </LinearLayout>



    <!-- Spielfeld -->
    <GridLayout
        android:id="@+id/gridLayoutSudoku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_marginTop="16dp"
        android:columnCount="9"
        android:rowCount="9">

        <!-- Hier werden die Zellen des Sudoku-Spielfelds dynamisch hinzugefügt -->

    </GridLayout>

    <Button
        android:id="@+id/buttonHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayoutSudoku"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/alfa_slab_one_regular"
        android:text="@string/hinweis" />

    <!-- Button für den Modus -->
    <Button
        android:id="@+id/buttonMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayoutSudoku"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/alfa_slab_one_regular"
        android:text="@string/modus"
        android:textSize="14sp" />

</RelativeLayout>
